# TuttleOFX

applications/example/canny/src/: main.cpp
applications/example/cannyTerry/src/: main.cpp
applications/example/simpleInputBuffer/src/: main.cpp
libraries/boostHack/boost/gil/: channel_algorithm.hpp  color_convert.hpp  gil_all.hpp
libraries/terry/src/terry/: clamp.hpp  copy.hpp  globals.hpp  typedefs.hpp
libraries/terry/src/terry/algorithm/: for_each.hpp  pixel_by_channel.hpp  static_channel_recursion.hpp  transform_pixels.hpp  transform_pixels_progress.hpp
libraries/terry/src/terry/color/: components.hpp  gradient.hpp  norm.hpp  transfer.hpp
libraries/terry/src/terry/colorspace/: colorspace.hpp
libraries/terry/src/terry/draw/: fill.hpp
libraries/terry/src/terry/filter/: convolve.hpp  correlate.hpp  floodFill.hpp  motionVectors.hpp
libraries/terry/src/terry/freetype/: freegil.hpp  utilgil.hpp
plugins/: CMakeLists.txt
plugins/_scripts/ImageEffectApi/src/: _ClassName_Plugin.cpp_
plugins/image/display/Histogram/: CMakeLists.txt
plugins/image/generator/ColorWheel/: CMakeLists.txt
plugins/image/generator/Text/: CMakeLists.txt
plugins/image/io/Exr/: CMakeLists.txt
plugins/image/io/OpenImageIO/: CMakeLists.txt
plugins/image/io/OpenImageIO/src/reader/: OpenImageIOReaderPlugin.cpp  OpenImageIOReaderProcess.hpp  OpenImageIOReaderProcess.tcc
plugins/image/io/OpenImageIO/src/writer/: OpenImageIOWriterPlugin.cpp  OpenImageIOWriterPlugin.hpp  OpenImageIOWriterProcess.tcc
plugins/param/analysis/ImageStatistics/: CMakeLists.txt
(+246 files in other folders)
